--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -1,3 +1,205 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-<html>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dumisani Mzingwane | Curriculum Vitae</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+</head>
+
+<body>
+    <header>
+        <div>
+            <img src="dm.jpg">
+        </div>
+        <div class="about_me">
+            <h2>DUMISANI MZINGWANE</h2>
+            <p>03 August 1986, Gweru Zimbabwe</p>
+            <p>Computer literate person with little knowledge in coding,technically focused and have good analytic skills. An
+                Information Technology man looking for a Web Development career that is both challenging and rewarding</p>
+        </div>
+        <div class="top_navigation">
+            <ul>
+                <li>
+                    <a href="#emp">Employment Details</a>
+                </li>
+                <li>
+                    <a href="#acad"> Academic Background</a>
+                </li>
+                <li>
+                    <a href="#prof">Professional Development</a>
+                </li>
+                <li>
+                    <a href="#useful_links">Resources</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <!--employment details-->
+    <section class="main_section">
+        <h2 id="emp">EMPLOYMENT DETAILS</h2>
+        <div>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <strong>Bata Shoe Company, Zimbabwe</strong>
+                        </td>
+                        <td>2015 - 2017</td>
+                    </tr>
+                    <tr>
+                        <td>Position</td>
+                        <td>Store Sales Assistant / Cashier</td>
+                    </tr>
+                    <tr>
+                        <td>Contact Details</td>
+                        <td>Tel Number: +263 54 225003</td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+
+        <h3>Responsibilities</h3>
+        <div>
+            <ul>
+                <li>Assisting in the filling of company`s invoices of purchased goods in the system.</li>
+                <li>Responsible for assisting customers in the shop. </li>
+                <li>Responsible for pricing of goods sold in the shop.</li>
+            </ul>
+        </div>
+        <div>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <strong>Ministry of Agriculture, Zimbabwe</strong>
+                        </td>
+                        <td>2007 - 2009</td>
+                    </tr>
+                    <tr>
+                        <td>Position</td>
+                        <td>Agriculture Extension Officer</td>
+                    </tr>
+                    <tr>
+                        <td>Contact Details</td>
+                        <td>Email: info@moa.gov.zw</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <h3>Responsibilities</h3>
+
+        <div>
+            <ul>
+                <li>Conducting master farmer training sessions in areas around Gweru, Somabhula, Chiundura</li>
+                <li>Responsible for organising mini local annual agricultural shows </li>
+                <li>Responsible for distributing agricultural farm inputs to various local domestic farmers around Midlands province</li>
+            </ul>
+        </div>
+
+        <!--academic details-->
+
+        <h2 id="acad">ACADEMIC BACKGROUND</h2>
+
+        <div>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>On-going studying (Web development)</td>
+                        <td>Hack Your Future</td>
+                        <td>Current</td>
+                    </tr>
+                    <tr>
+                        <td>Information Technology (Dip) Applications Development and Ntwkng.</td>
+                        <td>Oval International Computer College</td>
+                        <td>Forced drop out in first year </td>
+                    </tr>
+                    <tr>
+                        <td>Certificate in Agriculture</td>
+                        <td>Kaguvi College of Agriculture</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Sales Management and Marketing (Dip).</td>
+                        <td>College of Professional Management, Zimbabwe (UZ)</td>
+                        <td>Year completed 2009</td>
+                    </tr>
+                    <tr>
+                        <td>3 – A Levels .Geography .Divinity .Shona</td>
+                        <td>Matinunura High School</td>
+                        <td>Year Completed 2006</td>
+                    </tr>
+                    <tr>
+                        <td>6 – GCSE`s grades A - C</td>
+                        <td>Mkoba 3 High School</td>
+                        <td>Year Completed 2004</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <h2 id="prof">PROFESSIONAL DEVELOPMENT</h2>
+
+        <div>
+            <ul>
+                <li>Microsoft Office User, (MS Word, MS Excel, Visual Basic.Net).</li>
+                <li>Familiar with HTML5, CSS3</li>
+                <li>Good communication and analytic skills, ability to self manage and a passion to learn.</li>
+            </ul>
+        </div>
+    </section>
+    <hr>
+    <h2 id="useful_links">Usefull resources and references</h2>
+    <div class="resources">
+        <div class="references">
+            <a href="https://github.com/HackYourFuture/HTML-CSS">
+                <img src="image1.png" />
+                <p>Platforms/resources where you can find all hyf related information.</p>
+            </a>
+        </div>
+        <div class="references">
+            <a href="https://www.w3schools.com/css/css_table.asp">
+                <img src="image2.jpg" />
+                <p>More on tables in html and css. Click here</p>
+            </a>
+        </div>
+        <div class="references">
+            <a href="https://www.youtube.com/watch?v=BA_c3bGQXlQ">
+                <img src="image3.png" />
+                <p>More on uploading files on github</p>
+            </a>
+        </div>
+        <div class="references">
+            <a href="https://www.w3schools.com/cssref/css3_pr_all.asp">
+                <img src="image4.png" />
+                <p>More on CSS properties.
+                    <br>Click here</p>
+            </a>
+        </div>
+        <div class="references">
+            <img src="image5.jpg" />
+            <p>My hobbies</p>
+            <p>Bike riding, Watching movies, Playing video games</p>
+        </div>
+    </div>
+    <footer>
+        <div class="top_navigation">
+            <ul>
+                <li>
+                    <a href="">Email :: dumiedumara@gmail.com</a>
+                </li>
+                <li>
+                    <a href="">Address :: Pepunisbrug 2, Echt, Netherlands</a>
+                </li>
+            </ul>
+        </div>
+        <p>Dumie 2018</p>
+    </footer>
+</body>
+
+</html>
