--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dumisani Mzingwane | Curriculum Vitae</title>
+    <title>Taku Masawi | Curriculum Vitae</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
@@ -12,13 +12,17 @@
 <body>
     <header>
         <div>
-            <img src="dm.jpg">
+            <img src="soccer5.jpg">
         </div>
         <div class="about_me">
-            <h2>DUMISANI MZINGWANE</h2>
-            <p>03 August 1986, Gweru Zimbabwe</p>
-            <p>Computer literate person with little knowledge in coding,technically focused and have good analytic skills. An
-                Information Technology man looking for a Web Development career that is both challenging and rewarding</p>
+            <h2>TAKUDZWA. B MASAWI</h2>
+            <p class="abot">
+                02 April 1991, Harare Zimbabwe
+            </p>
+            <p>Focused, disciplined, self-motivated and physically fit 27 year old man. Defensive Midfielder, Center back and
+                Attacking Midfielder. Professional footballer with impressive skills.I speak, eat, breath and live soccer
+                .Soccer has made me who I am today on and off the pitch.
+            </p>
         </div>
         <div class="top_navigation">
             <ul>
@@ -26,13 +30,16 @@
                     <a href="#emp">Employment Details</a>
                 </li>
                 <li>
-                    <a href="#acad"> Academic Background</a>
+                    <a href="#acad"> More References</a>
                 </li>
                 <li>
-                    <a href="#prof">Professional Development</a>
+                    <a href="file:///C:/Users/dumie/site/takudzwa_masawi/gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="#useful_links">Resources</a>
+                    <a href="#useful_links">Connect with me</a>
+                </li>
+                <li>
+                    <a href="#prof">Strong Points / Skills</a>
                 </li>
             </ul>
         </div>
@@ -40,35 +47,99 @@
 
     <!--employment details-->
     <section class="main_section">
-        <h2 id="emp">EMPLOYMENT DETAILS</h2>
+        <h2 id="emp">EMPLOYMENT DETAILS / CLUBS PLAYED FOR</h2>
         <div>
             <table>
                 <tbody>
                     <tr>
                         <td>
-                            <strong>Bata Shoe Company, Zimbabwe</strong>
+                            <strong>E.V.V Echt, Netherlands</strong>
                         </td>
-                        <td>2015 - 2017</td>
+                        <td>2017 November - current</td>
                     </tr>
                     <tr>
                         <td>Position</td>
-                        <td>Store Sales Assistant / Cashier</td>
+                        <td>Mid-fielder , Defender</td>
                     </tr>
                     <tr>
                         <td>Contact Details</td>
-                        <td>Tel Number: +263 54 225003</td>
+                        <td>Tel Number: +31 (0)475 48 6065
+                            <a href="http://www.evvecht.nl/Home">www.evvecht.nl</a>
+                        </td>
                     </tr>
 
                 </tbody>
             </table>
         </div>
 
-        <h3>Responsibilities</h3>
+        <!--<h3>Responsibilities</h3>-->
         <div>
             <ul>
-                <li>Assisting in the filling of company`s invoices of purchased goods in the system.</li>
-                <li>Responsible for assisting customers in the shop. </li>
-                <li>Responsible for pricing of goods sold in the shop.</li>
+                <li></li>
+            </ul>
+        </div>
+
+        <div>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <strong>TOPSCORE</strong>
+                        </td>
+                        <td>2014 August</td>
+                    </tr>
+                    <tr>
+                        <td>Position</td>
+                        <td>Defender, Mid-fielder</td>
+                    </tr>
+                    <tr>
+                        <td>Contact Details</td>
+                        <td>Berto De Vree: +31 61 386 9032</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!--<h3>Responsibilities</h3>-->
+
+        <div>
+            <ul>
+                <li></li>
+            </ul>
+        </div>
+
+        <div>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <strong>AVENDALE ATHLETICO F.C, South Africa</strong>
+                        </td>
+                        <td>2009 - 2014
+                            <em>
+                                <b>Tygerberg League</b>
+                            </em>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Position</td>
+                        <td> Mid-fielder , Defender</td>
+                    </tr>
+                    <tr>
+                        <td>Contact Details</td>
+                        <td>Jason Dodgen Tel Number: +2779 936 0437 Email:
+                            <a href="">jason.d.o16@gmail.com</a>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+        <!--<h3>Responsibilities</h3>-->
+
+        <div>
+            <ul>
+                <li></li>
             </ul>
         </div>
         <div>
@@ -76,129 +147,132 @@
                 <tbody>
                     <tr>
                         <td>
-                            <strong>Ministry of Agriculture, Zimbabwe</strong>
+                            <strong>SPROUTING F.C Zimbabwe</strong>
                         </td>
-                        <td>2007 - 2009</td>
+                        <td>2008 - 2009
+                            <em>
+                                <b>Division 2</b>
+                            </em>
+                        </td>
                     </tr>
                     <tr>
                         <td>Position</td>
-                        <td>Agriculture Extension Officer</td>
+                        <td> Mid-fielder , Defender</td>
                     </tr>
                     <tr>
                         <td>Contact Details</td>
-                        <td>Email: info@moa.gov.zw</td>
+                        <td>Calvin Nyazema Sprouting F.C Chairman Tel Number: +263 772 268453
+                        </td>
                     </tr>
+
                 </tbody>
             </table>
         </div>
 
-        <h3>Responsibilities</h3>
+        <!--references-->
 
-        <div>
-            <ul>
-                <li>Conducting master farmer training sessions in areas around Gweru, Somabhula, Chiundura</li>
-                <li>Responsible for organising mini local annual agricultural shows </li>
-                <li>Responsible for distributing agricultural farm inputs to various local domestic farmers around Midlands province</li>
-            </ul>
-        </div>
-
-        <!--academic details-->
-
-        <h2 id="acad">ACADEMIC BACKGROUND</h2>
+        <h2 id="acad">MORE REFERENCES</h2>
 
         <div>
             <table>
                 <tbody>
                     <tr>
-                        <td>On-going studying (Web development)</td>
-                        <td>Hack Your Future</td>
-                        <td>Current</td>
+                        <td> SWANSEA City Ferrie Bodde</td>
+                        <td>
+                            <a href="">ferriebodde@gmail.com</a>
+                        </td>
+                        <td>Cell No: +31 6 21194165</td>
                     </tr>
                     <tr>
-                        <td>Information Technology (Dip) Applications Development and Ntwkng.</td>
-                        <td>Oval International Computer College</td>
-                        <td>Forced drop out in first year </td>
+                        <td>Marshall Gore</td>
+                        <td>
+                            <a href="">marshall@aaoe.org.uk</a>
+                        </td>
+                        <td>Cell No: +447828068585</td>
                     </tr>
                     <tr>
-                        <td>Certificate in Agriculture</td>
-                        <td>Kaguvi College of Agriculture</td>
-                        <td></td>
+                        <td>Edward Bvopfo A.F.M CRANBORNE F.C</td>
+                        <td>
+                            <a href="">ebvopfo@gmail.com</a>
+                        </td>
+                        <td>+263 77 225 6857</td>
                     </tr>
-                    <tr>
-                        <td>Sales Management and Marketing (Dip).</td>
-                        <td>College of Professional Management, Zimbabwe (UZ)</td>
-                        <td>Year completed 2009</td>
-                    </tr>
-                    <tr>
-                        <td>3 – A Levels .Geography .Divinity .Shona</td>
-                        <td>Matinunura High School</td>
-                        <td>Year Completed 2006</td>
-                    </tr>
-                    <tr>
-                        <td>6 – GCSE`s grades A - C</td>
-                        <td>Mkoba 3 High School</td>
-                        <td>Year Completed 2004</td>
-                    </tr>
+
                 </tbody>
             </table>
         </div>
-
-        <h2 id="prof">PROFESSIONAL DEVELOPMENT</h2>
+        <h3>FEATURED ARTICLES</h3>
 
         <div>
             <ul>
-                <li>Microsoft Office User, (MS Word, MS Excel, Visual Basic.Net).</li>
-                <li>Familiar with HTML5, CSS3</li>
-                <li>Good communication and analytic skills, ability to self manage and a passion to learn.</li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
+
+        <h2 id="prof">STRONG POINTS / SKILLS</h2>
+
+        <div>
+            <ul>
+                <li>Passes --- Excellent 70%</li>
+                <li>Tackles --- Very good 60%</li>
+                <li>Interceptions --- Very good 60%</li>
+                <li>Command skills --- Excellent 80%</li>
+            </ul>
+        </div>
+        <hr>
     </section>
-    <hr>
-    <h2 id="useful_links">Usefull resources and references</h2>
+    <h2 id="useful_links">Get in touch with me.</h2>
     <div class="resources">
         <div class="references">
-            <a href="https://github.com/HackYourFuture/HTML-CSS">
-                <img src="image1.png" />
-                <p>Platforms/resources where you can find all hyf related information.</p>
+            <a href="https://www.facebook.com/taku.masawi.5">
+                <img src="face1.png" />
+                <p>Facebook</p>
             </a>
         </div>
         <div class="references">
-            <a href="https://www.w3schools.com/css/css_table.asp">
-                <img src="image2.jpg" />
-                <p>More on tables in html and css. Click here</p>
+            <a href="https://nl.linkedin.com/in/takudzwa-masawi-18012292">
+                <img src="link2.png" />
+                <p>Linkedin</p>
             </a>
         </div>
         <div class="references">
-            <a href="https://www.youtube.com/watch?v=BA_c3bGQXlQ">
-                <img src="image3.png" />
-                <p>More on uploading files on github</p>
+            <a href="">
+                <img src="insta3.jpg" />
+                <p>Instagram</p>
             </a>
         </div>
         <div class="references">
-            <a href="https://www.w3schools.com/cssref/css3_pr_all.asp">
-                <img src="image4.png" />
-                <p>More on CSS properties.
+            <a href="https://www.youtube.com/watch?v=bSOh6O6Uzc4&feature=youtu.be">
+                <img src="utube6.jpg" />
+                <p>More videos.
                     <br>Click here</p>
             </a>
         </div>
         <div class="references">
-            <img src="image5.jpg" />
-            <p>My hobbies</p>
-            <p>Bike riding, Watching movies, Playing video games</p>
+            <img src="footbal4.png" />
+            <p>Some interesting stuff about me...</p>
+            <p></p>
         </div>
     </div>
     <footer>
         <div class="top_navigation">
             <ul>
                 <li>
-                    <a href="">Email :: dumiedumara@gmail.com</a>
+                    <a href="">Email :: takuteezy@gmail.com</a>
+                </li>
+                <li>
+                    <a href="">+31 657352826</a>
                 </li>
                 <li>
                     <a href="">Address :: Pepunisbrug 2, Echt, Netherlands</a>
                 </li>
             </ul>
         </div>
-        <p>Dumie 2018</p>
+        <p>
+            <em> Intellware Digital Solutions &copy 2018</em>
+        </p>
     </footer>
 </body>
 
