--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -33,7 +33,7 @@
                     <a href="#acad"> More References</a>
                 </li>
                 <li>
-                    <a href="file:///C:/Users/dumie/site/takudzwa_masawi/gallery.html">Gallery</a>
+                    <a href="https://spacecol.github.io/site/taku_masawi/">Gallery</a>
                 </li>
                 <li>
                     <a href="#useful_links">Connect with me</a>
