--- a/taku_masawi/index.html
+++ b/taku_masawi/index.html
@@ -26,7 +26,7 @@
         <div class="top_navigation">
             <ul>
                 <li>
-                    <a href="file:///C:/Users/dumie/site/takudzwa_masawi/mycv.html">Back to Home Page</a>
+                    <a href="https://spacecol.github.io/site/takudzwa_masawi/">Back to Home Page</a>
                 </li>
                 <li>
                     <a href="#gallery_section">My gallery</a>
