--- a/taku_masawi/index.html
+++ b/taku_masawi/index.html
@@ -48,7 +48,7 @@
             <figure class="gallery__item">
                 <img src="tk7.jpg" alt=" " class="gallery__image ">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -56,21 +56,21 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk2.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk3.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk4.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -78,7 +78,7 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk5.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -86,21 +86,21 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk6.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk14.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk25.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -108,50 +108,50 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk17.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk18.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--  Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk30.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk21.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--  Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <!---->
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk15.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk16.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk1.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    With Sven, E.V.V Echt Coach
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk12.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -160,25 +160,25 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk22.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk27.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk24.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--  Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk25.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -186,25 +186,25 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk29.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk20.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk28.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk35.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!--Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -212,25 +212,25 @@
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk30.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk31.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk34.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
             <figure class="gallery__item ">
                 <img class="gallery__image " src="tk32.jpg">
                 <figcaption class="gallery__image-caption ">
-                    Lorem ipsum dolor sit amet.
+                    <!-- Lorem ipsum dolor sit amet.-->
                 </figcaption>
             </figure>
 
@@ -243,32 +243,35 @@
     <div class="resources ">
         <div class="references ">
             <a href=" ">
-                <img src="face1.png " />
-                <p>Facebook</p>
+                <img src="utube6.jpg" />
+                <p>...</p>
             </a>
         </div>
         <div class="references ">
             <a href=" ">
-                <img src="link2.png " />
-                <p>Linkedin</p>
+                <img src="utube6.jpg" />
+                <p>...</p>
             </a>
         </div>
         <div class="references ">
             <a href=" ">
-                <img src="insta3.jpg " />
-                <p>Instagram</p>
+                <img src="utube6.jpg" />
+                <p>...</p>
             </a>
         </div>
         <div class="references ">
-            <a href=" ">
+            <a href="https://www.youtube.com/watch?v=bSOh6O6Uzc4&feature=youtu.be">
                 <img src="utube6.jpg " />
-                <p>More videos.
-                    <br>Click here</p>
+                <p>Avendale Athletico F.C.
+                    <br>Cape Town</p>
             </a>
         </div>
         <div class="references ">
             <img src="footbal4.png " />
-            <p>Some interesting stuff about me...</p>
+            <p>Some interesting stuff about me...
+                <br>
+                <em>Playing video games, Gym</em>
+            </p>
             <p></p>
         </div>
     </div>
