--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -30,7 +30,7 @@
                     <a href="#emp">Employment Details</a>
                 </li>
                 <li>
-                    <a href="#acad"> More References</a>
+                    <a href="#acad"> Featured Articles</a>
                 </li>
                 <li>
                     <a href="https://spacecol.github.io/site/taku_masawi/">Gallery</a>
@@ -59,7 +59,7 @@
                     </tr>
                     <tr>
                         <td>Position</td>
-                        <td>Mid-fielder , Defender</td>
+                        <td>Mid-fielder , Defender for 1st & 2nd Team</td>
                     </tr>
                     <tr>
                         <td>Contact Details</td>
@@ -171,7 +171,7 @@
 
         <!--references-->
 
-        <h2 id="acad">MORE REFERENCES</h2>
+        <h2>MORE REFERENCES</h2>
 
         <div>
             <table>
@@ -201,13 +201,22 @@
                 </tbody>
             </table>
         </div>
-        <h3>FEATURED ARTICLES</h3>
+        <h3 id="acad">FEATURED ARTICLES</h3>
 
-        <div>
+        <div class=link_color>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    Supporter bus EVV 2 to Nederweert
+                    <a href="http://www.evvecht.nl/Nieuws/Supportersbus_EVV_2_naar_Nederweert">Click here for more information</a>
+                </li>
+                <li>
+                    E.V.V Celebration. 2-0 winst op @DeGraafschap
+                    <a href="https://twitter.com/EVV_Echt/status/995387922978402310?s=08">Click here for more information</a>
+                </li>
+                <li>
+                    More E.V.V Current news
+                    <a href="http://www.evvecht.nl/Nieuws">Click here</a>
+                </li>
             </ul>
         </div>
 
@@ -250,11 +259,6 @@
                     <br>Click here</p>
             </a>
         </div>
-        <div class="references">
-            <img src="footbal4.png" />
-            <p>Some interesting stuff about me...</p>
-            <p></p>
-        </div>
     </div>
     <footer>
         <div class="top_navigation">
@@ -271,7 +275,7 @@
             </ul>
         </div>
         <p>
-            <em> Intellware Digital Solutions &copy 2018</em>
+            Intellware Digital Solutions &copy 2018
         </p>
     </footer>
 </body>
