--- a/taku_masawi/index.html
+++ b/taku_masawi/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-            <img src="soccer5.jpg">
+            <img src="tk5.jpg">
         </div>
         <div class="about_me">
             <h2>TAKUDZWA. B MASAWI</h2>
