--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div>
-            <img src="soccer5.jpg">
+            <img src="tk37.jpg">
         </div>
         <div class="about_me">
             <h2>TAKUDZWA. B MASAWI</h2>
