--- a/taku_masawi/index.html
+++ b/taku_masawi/index.html
@@ -20,8 +20,9 @@
             <p class="abot">
                 02 April 1991, Harare Zimbabwe
             </p>
-            <p>Computer literate person with little knowledge in coding,technically focused and have good analytic skills. An
-                Information Technology man looking for a Web Development career that is both challenging and rewarding</p>
+            <p>Focused, disciplined, self-motivated and physically fit 27 year old man. Defensive Midfielder, Center back and
+                Attacking Midfielder. Professional footballer with impressive skills.I speak, eat, breath and live soccer
+                .Soccer has made me who I am today on and off the pitch.</p>
         </div>
         <div class="top_navigation">
             <ul>
