--- a/takudzwa_masawi/index.html
+++ b/takudzwa_masawi/index.html
@@ -21,7 +21,7 @@
             </p>
             <p>Focused, disciplined, self-motivated and physically fit 27 year old man. Defensive Midfielder, Center back and
                 Attacking Midfielder. Professional footballer with impressive skills.I speak, eat, breath and live soccer
-                .Soccer has made me who I am today on and off the pitch.
+                .Soccer has made me who I am today on and off the pitch..
             </p>
         </div>
         <div class="top_navigation">
